--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eslint-plugin-promise": "^4.2.1"
   },
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.6.1",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
